Fix status icon overflow.

--- a/src/components/Office/PPM/ReviewDocumentsSidePanel/ReviewDocumentsSidePanel.module.scss
+++ b/src/components/Office/PPM/ReviewDocumentsSidePanel/ReviewDocumentsSidePanel.module.scss
@@ -14,8 +14,8 @@
 
   h3 {
     &:nth-of-type(1) {
-    @include u-margin-top(0);
-    @include u-margin-bottom(1);
+      @include u-margin-top(0);
+      @include u-margin-bottom(1);
     }
 
     &.send {
@@ -37,7 +37,7 @@
   .row {
     display: flex;
     flex-direction: row;
-    border-top: 1px solid #DCDEE0;
+    border-top: 1px solid #dcdee0;
     padding: 12px 8px;
     h3 {
       @include u-font-size('body', 'md');
@@ -49,25 +49,26 @@
     span {
       font-weight: bold;
     }
+    > div {
+      flex-shrink: 0;
+    }
   }
 
-  [data-icon="check"] {
+  [data-icon='check'] {
     color: $success;
     margin-left: 17px;
     margin-right: 9px;
   }
 
-  [data-icon="ban"] {
+  [data-icon='ban'] {
     color: $warning;
     margin-left: 17px;
     margin-right: 9px;
   }
 
-  [data-icon="xmark"] {
+  [data-icon='xmark'] {
     color: $error;
     margin-left: 17px;
     margin-right: 9px;
   }
-
-
 }
